--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 
-actix-web = "3.3.2"
+actix-web = { version = "3.3.3", features = ["openssl"] }
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = "1.0.130"
 json ="0.12.4"
@@ -14,7 +14,6 @@ serde_json = "1.0"
 actix-cors = "0.5.4"
 headers ="0.3.5"
 diesel = { version = "1.0.0", features = ["postgres"] }
-
 actix-rt = "1.0"
 config = "0.11.0"
 dotenv = "0.15"
@@ -25,7 +24,7 @@ tracing-futures = "0.2"
 tracing-log = {version = "0.1", features = ["env_logger"] }
 tracing-subscriber = "0.2.0"
 sqlx = {version= "0.3.0", default-features = false, features = ["runtime-tokio", "macros","postgres","uuid" ,"chrono"]}
-uuid ={version = "0.8", features = ["serde"]}
+uuid ={version = "0.8", features = ["serde","v4"]}
 chrono = {version = "0.4.19", features = ["serde"]}
 validator = "0.14.0"
 validator_derive ="0.14.0"
@@ -33,3 +32,4 @@ jsonwebtoken = "7.1"
 argonautica = {version = "0.2", features = ["simd"]}
 futures = {version = "0.3", features = ["compat"]}
 actix-web-httpauth = "0.5.1"
+openssl = { version = "0.10.0", features = ["v110"] }
